--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,7 @@
             <a href="{% url 'Rasul' %}"><li>About</li></a>
             <a href="{% url 'Misha' %}"><li>Contacts</li></a>
             <a href=""><li>Orders</li></a>
+            <a href=""><li>My projects</li></a>
         </ul>
     </header>
     <h1>Hello world</h1>
